# near_contract_rust-did

./: Cargo.toml  README.md
res/: did.wasm
src/: lib.rs
